fix overflow on invite people list on outreach

--- a/app/stylesheets/_tabs.sass
+++ b/app/stylesheets/_tabs.sass
@@ -3,7 +3,8 @@
   display: none
 
 .ui-tabs-panel
-  height: 200px
+  height: 330px
+  overflow: auto
 
 .ui-tabs-nav
   background: $lightGray
